# MonthChallenges

./: .gitignore  CMakeLists.txt  README.md  helper.zsh  lib
.cache/clangd/index/: animation.cpp.DDBB7DFD0DC8A36E.idx  animation.hpp.6434A25C0490BE84.idx  automerge.cpp.F62A1C48BFD03A6A.idx  autoreset.hpp.E4FAD3C3E475EB1C.idx  blink.cpp.44880CE9D3B1D109.idx  bold.cpp.CBCE3EEA32166436.idx  border.cpp.FA11EBCBCD317E1A.idx  box.cpp.0C0315FCD35CF8E6.idx  box.hpp.ADFA54B703CC0FEA.idx  box_helper.cpp.9B0CA1A1EED544AD.idx  box_helper.hpp.34F97D950B1EF343.idx  button.cpp.D64CAF0A8C65229F.idx  canvas.cpp.FF6A4191E4BEBCEE.idx  canvas.hpp.3960D30A792E5352.idx  captured_mouse.hpp.721623C048E75BC5.idx  catch_event.cpp.1B2168DB7B26C677.idx  checkbox.cpp.ED428372E8D84325.idx  clear_under.cpp.B58562A3E1935ABD.idx  collapsible.cpp.47079C3CF5571078.idx  color.cpp.3B02D132BE7714DD.idx  color.cpp.6714C86AD1BCFCED.idx  color.hpp.8A0FACCCF3950AA5.idx  color_info.cpp.5084727A10AE541E.idx  color_info.hpp.BF3651235A799152.idx  component.cpp.D345A0692B4C4E63.idx  component.hpp.2D0EBF4D5FA28A1B.idx  component_base.hpp.FBEF1B0F33B23166.idx  component_options.cpp.8379A7889DD09223.idx  component_options.hpp.1363C91176B0ABDD.idx  composite_decorator.cpp.50212DDA5646F39B.idx  container.cpp.D3BFB4DE48E556CC.idx  dbox.cpp.331C3863FFD23A19.idx  deprecated.hpp.A5B9FBAF6E690B82.idx  deprecated.hpp.B91C5B0B8F302746.idx  dim.cpp.65A2120544498653.idx  direction.hpp.1320F0ACBFFAD979.idx  dropdown.cpp.07B1BF324B31E0AA.idx  elements.hpp.23FA4A1C583E1409.idx  event.cpp.40CFF1BCF02EB2A1.idx  event.hpp.9EF3A275ED631750.idx  (+72 more)
AppTest/: CMakeLists.txt
AppTest/include/: RandomUtil.hpp  RowCol.hpp  TestConfig.hpp  TestConfigTOML.hpp  TestDefinition.hpp  base26.hpp  commandline.hpp  runtests.hpp
AppTest/source/: CMakeLists.txt  RowCol.cpp  TestConfig.cpp  TestConfigTOML.cpp  TestDefinition.cpp  base26.cpp  commandline.cpp  generatetest.cpp  main.cpp  runtests.cpp
Challenge01/: CMakeLists.txt  Challenge.md
Challenge01/files/: test1.txt
Challenge01/tester01/: .gitignore  CMakeLists.txt
Challenge01/tester01/include/: RandomUtil.hpp  RowCol.hpp  TestConfig.hpp  base26.hpp  commandline.hpp  generatetest.hpp  stringutil.hpp
Challenge01/tester01/source/: TestConfig.cpp  TestConfigTOML.cpp  TestDefinition.cpp  commandline.cpp  generatetest.cpp  main.cpp
Challenge02/: Challenge02.md
Challenge03/: CMakeLists.txt  Challenge03.md
Challenge03/tester03/: CMakeLists.txt
Challenge03/tester03/include/: aistats.hpp  commandline.hpp  programoptions.hpp  reports.hpp  reprochelper.hpp  runner.hpp  showreport.hpp  testrunner.hpp  virtualgames.hpp  widgets.hpp
Challenge03/tester03/src/: commandline.cpp  main.cpp  reports.cpp  runner.cpp  showreport.cpp  virtualgames.cpp  widgets.cpp
